<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bible</string>

    <!-- Menu options -->
    <string name="menu_options_random_verse">Random verse</string>
    <string name="menu_options_random_song">Random song</string>
    <string name="menu_options_settings">Settings</string>

    <!-- Main activity -->
    <string name="main_drawer_bibles">Bible translations</string>
    <string name="main_drawer_song_bundles">Song bundles</string>

    <string name="main_book_alert_title_label">Book</string>
    <string name="main_chapter_alert_title_label">Chapter</string>
    <string name="main_song_alert_title_label">Song</string>

    <string name="main_chapter_not_available_title_label">Chapter not available</string>
    <string name="main_chapter_not_available_description_label">The select Bible book and chapter are not found in this bible translation</string>

    <!-- Search activity -->
    <string name="search_input_hint">Search</string>

    <string name="search_start_title_label">Start searching...</string>
    <string name="search_start_description_label">Type your search query and find your chapter, verse or song...</string>

    <string name="search_empty_title_label">No search results</string>
    <string name="search_empty_description_label">We can\'t find any chapter, verse or song with that search query</string>
    <string name="search_empty_hero_button">Clear search</string>

    <!-- Settings activity -->
    <string name="settings_title_label">Settings</string>

    <string name="settings_display_label">Display</string>

    <string name="settings_font_button">Font</string>
    <string name="settings_font_serif">Serif</string>
    <string name="settings_font_sans_serif">Sans-Serif</string>
    <string name="settings_font_monospace">Monospace</string>

    <string name="settings_language_button">Language</string>
    <string name="settings_language_english">English</string>
    <string name="settings_language_dutch">Nederlands</string>
    <string name="settings_language_german">Deutsch</string>
    <string name="settings_language_system">Use system default</string>

    <string name="settings_theme_button">Theme</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_battery_saver">Set by Battery Saver</string>
    <string name="settings_theme_system">Use system default</string>

    <string name="settings_information_label">Information</string>
    <string name="settings_version_button">App version</string>
    <string name="settings_version_message">Who, you are an amazing hacker!</string>
    <string name="settings_rate_button">Rate this app</string>
    <string name="settings_share_button">Share this app</string>
    <string name="settings_share_message">Check out this cool app:</string>
    <string name="settings_about_button">About this app</string>
    <string name="settings_footer_button">This app is made by Bastiaan van der Plaat</string>

    <string name="settings_about_alert_title_label">About this app</string>
    <string name="settings_about_alert_message_label">This app is made by Bastiaan van der Plaat</string>
    <string name="settings_about_alert_website_button">Website</string>
    <string name="settings_about_alert_ok_button">OK</string>
</resources>
